after 1st review: beforeEach for all test cases